--- a/frontend/app/src/app/auth/signin/signin.component.css
+++ b/frontend/app/src/app/auth/signin/signin.component.css
@@ -9,7 +9,7 @@
 .form {
     width: 50%;
     padding: 20px;
-    border: 1px solid #ccc;
+    /* border: 1px solid #ccc; */
     border-radius: 5px;
     margin-right: 2rem;
     align-items: start;
@@ -20,6 +20,5 @@
     width: 50%;
     margin-bottom: 20px;
     align-items: end;
-    float: right;
     border-radius: 24px;
 }
